Adding ships to the dialog box for selection, needing to complete the functionality for selection and then process that into the game next

--- a/src/Pages/CSS/dialog.css
+++ b/src/Pages/CSS/dialog.css
@@ -1,8 +1,25 @@
-dialog#select-ships-dialog{
-    height: 80%;
-    width: 45rem;
+dialog{
+    height: 100%;
+    width: 100%;
 
-    padding: 1.5rem;
+    background-color: transparent;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 4rem;
+
+    overflow: visible;
+}
+
+dialog::backdrop{
+    background-color: rgba(20, 20, 20, 0.4);
+    
+}
+
+
+dialog > *{
+    flex-shrink: 0;
 
     background-color: rgb(27, 27, 27);
 
@@ -10,18 +27,133 @@ dialog#select-ships-dialog{
 
     border-radius: 1rem;
 
+    width: 45rem;
+
+    padding: 1.5rem;
+}
+
+div#select-ships{
+    height: 55rem;
+
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 
-    margin: auto;
+
+    row-gap: 4rem;
 }
 
 
-dialog#select-ships-dialog::backdrop{
-    background-color: rgba(20, 20, 20, 0.4);
+div#select-ships > div#dialog-ships-header{
+    width: 100%;
+
+    font-family: "Orbitron", sans-serif;
+    font-size: large;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+div#ships-selection-container{
+    font-family: "Orbitron", sans-serif;
+
+    flex: 1;
+
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    row-gap: 2rem;
+}
+
+
+div#ships-selection-container > div.dialog-ship-container{
+    flex: 1;
+
+    background-color: rgba(255, 255, 255, 0.2);
+    border: .1rem solid white;
+
+    padding: 0rem 2rem;
+
+    border-radius: .8rem;
+
+    /* max-height: 8rem; */
+
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+
+    row-gap: 1rem;
+
+    cursor: pointer;
+}
+
+
+div.dialog-ship-container > div.dialog-ship-image{
+    /* flex: 1; */
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+div.dialog-ship-container > div.dialog-ship-image > div{
+    aspect-ratio: 1;
+    width: 3rem;
+
+    border: .2rem solid rgb(85, 85, 85);
+
+    background-color: grey;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+div#select-grid{
+    height: 80%;
+    width: 45rem;
+
+    display: flex;
+
     
+
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    /* margin: auto; */
 }
+
+
+
 
 div#dialog-header-text-container{
     width: 100%;
@@ -51,7 +183,7 @@ div#dialog-header-text-container > p#drag-drop-desc{
 }
 
 
-dialog#select-ships-dialog > .game-board{
+div#select-grid > .game-board{
     margin: auto;
 }
 
