--- a/src/Pages/CSS/game-board.css
+++ b/src/Pages/CSS/game-board.css
@@ -5,20 +5,22 @@
 }
 
 .game-space{
-    width: 3.5rem;
+    width: var(--ship-width-height);
     aspect-ratio: 1;
 
-    border: .1rem white solid;
+    border: var(--ship-border-width) white solid;
+
+    background-color: rgb(25, 52, 128);
 
     /* cursor: pointer; */
 }
 
 
 
-
+/* 
 dialog .game-space[data-cell-available="no-interaction"]{
-    background-color: rgb(25, 52, 128);
-}
+    
+} */
 
 dialog .game-space[data-cell-available="available"]{
     background-color: rgba(144, 238, 144);
