Previous to modifying the IFindHTML interface to executing a command instead of returning an array to go through twice

--- a/src/Pages/CSS/dialog.css
+++ b/src/Pages/CSS/dialog.css
@@ -16,7 +16,7 @@ dialog{
 
     background-color: transparent;
 
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
     column-gap: 4rem;
