--- a/src/Pages/CSS/main.css
+++ b/src/Pages/CSS/main.css
@@ -1,19 +1,93 @@
 main{
+    grid-area: main;
+
+    width: 100%;
+    height: 100%;
+
+    /* background-color: green; */
+
+    padding-bottom: 1rem;
+}
+
+main > div#game-boards-container{
     width: 100%;
     height: 100%;
 
     display: flex;
-    justify-content: center;
+    /* flex-direction: column; */
     align-items: center;
-
-    padding: .7rem;
+    justify-content: space-evenly;
+    gap: 6rem;
 }
 
-h1#battleship-heading{
-    align-self: flex-start;
-    margin-right: auto;
 
-    font-size: 6rem;
+
+main > div#game-boards-container > div.game-board-container:nth-child(1){
+    /* margin: auto; */
+}
+
+main > div#game-boards-container > div.game-board-container{
+    --bcg-grid: rgba(0, 0, 80, 0.4);
+    
+    position: relative;
+    
+    padding: 1.5rem;
+    border-radius: 1rem;
+
+    background-color: var(--bcg-grid);
+}
+
+main > div#game-boards-container > div.game-board-container::before{
+    /* content: 'Computer'; */
+
+    position: absolute;
+
+    bottom: 100%;
+    right: 5%;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 
     font-family: "Orbitron", sans-serif;
+    font-size: large;
+
+    /* padding-top: 1rem; */
+    height: 3.2rem;
+
+    padding-left: 1rem;
+    padding-right: 1rem;
+
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+
+    background-color: var(--bcg-grid);
+
+    transform-origin: bottom right;
 }
+
+
+@media (width <= 75rem) {
+    main > div#game-boards-container{
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    main > div#game-boards-container > div.game-board-container::before{
+        bottom: 95%;
+        right: 100%;
+
+        transform: rotate(270deg);
+    }
+}
+
+
+
+main > div#game-boards-container > div.game-board-container#computer-game-board-container::before{
+    content: 'Computer';
+}
+
+main > div#game-boards-container > div.game-board-container#user-game-board-container::before{
+    content: 'You';
+}
+
