--- a/src/Pages/CSS/dialog.css
+++ b/src/Pages/CSS/dialog.css
@@ -1,4 +1,4 @@
-dialog{
+dialog#select-ships-dialog{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -30,7 +30,7 @@ dialog::backdrop{
 }
 
 
-dialog > *:not(#ship-draggable){
+dialog#select-ships-dialog > *:not(#ship-draggable){
     flex-shrink: 0;
 
     background-color: rgb(27, 27, 27);
