Fixing all errors and now the logic for the AI works as intended even on reset - Next is to hopefully add a successful message board on the right, needing to give the ships names and add a scroll effect on the chat for each fired shot

--- a/src/Pages/CSS/header.css
+++ b/src/Pages/CSS/header.css
@@ -10,7 +10,11 @@ header{
 
     padding: .7rem;
 
-    background-color: red;
+    background-color: var(--component-background-colour);
+
+    border-color: white;
+    border-style: solid;
+    border-bottom-width: .1rem;
 }
 
 h1#battleship-heading{
