--- a/src/Pages/CSS/aside.css
+++ b/src/Pages/CSS/aside.css
@@ -4,5 +4,9 @@ aside{
     width: 100%;
     height: 100%;
 
-    background-color: black;
+    background-color: var(--component-background-colour);
+
+    border-color: white;
+    border-style: solid;
+    border-left-width: .1rem;
 }
