--- a/src/Pages/CSS/dialog.css
+++ b/src/Pages/CSS/dialog.css
@@ -25,7 +25,7 @@ dialog#select-ships-dialog{
 }
 
 dialog::backdrop{
-    background-color: rgba(20, 20, 20, 0.4);
+    background-color: rgba(20, 20, 20, .9);
     
 }
 
@@ -33,9 +33,11 @@ dialog::backdrop{
 dialog#select-ships-dialog > *:not(#ship-draggable){
     flex-shrink: 0;
 
-    background-color: rgb(27, 27, 27);
+    background-color: var(--component-background-colour);
 
     box-shadow: 0 0 5rem rgb(39, 39, 39);
+
+    border: .1rem white solid;
 
     border-radius: 1rem;
 
